force-app/main/default/objects/Plan_Template_Field_Blueprint__c/Plan_Template_Field_Blueprint__c.object-meta.xml
<CustomObject>
    <description>This object contains the field configuration for the plan template, specifying which plan fields should be displayed in which section.</description>
    <label>Plan Template Field Blueprint</label>
    <nameField>
        <displayFormat>PTFB-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Template Field Blueprints</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>