force-app/main/default/objects/Plan_Template_Field_Blueprint__c/fields/Plan_Field_List__c.field-meta.xml
<CustomField>
    <fullName>Plan_Field_List__c</fullName>
    <label>Plan Field List</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>