force-app/main/default/objects/Plan_Template_Field_Blueprint__c/fields/Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Plan_Template__c</fullName>
    <label>Plan Template</label>
    <referenceTo>Plan_Template__c</referenceTo>
    <relationshipLabel>Plan Template Field Blueprints</relationshipLabel>
    <relationshipName>Plan_Template_Field_Blueprints</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>